package com.rotavital.dominio.enums;

public enum StatusBolsa {
    DISPONIVEL,
    RESERVADA,
    EM_TRANSITO,
    ENTREGUE,
    VENCIDA,
    DESCARTADA
}
