package com.rotavital.dominio.enums;

public enum StatusRequisicao {
    PENDENTE,
    EM_ATENDIMENTO,
    ATENDIDA,
    CANCELADA
}
