package com.rotavital.dominio.enums;

public enum StatusRota {
    PLANEJADA,
    EM_ANDAMENTO,
    CONCLUIDA,
    CANCELADA
}
